--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 :root {
-  --dark: #372b14;
+  --dark: #2c2210;
   --light: #40331c;
 }
 
@@ -47,8 +47,6 @@ body {
   left: -50%;
   width: 200%;
   margin: 0 auto;
-  /* background-image: -webkit-gradient(linear, left top, left bottom, from(#d8d8d8), color-stop(60%, #f2f2f2));
-  background-image: linear-gradient(#d8d8d8, #f2f2f2 60%); */
   background-image: -webkit-gradient(linear, left top, left bottom, from(var(--dark)), color-stop(60%, var(--light)));
   background-image: linear-gradient(var(--dark), var(--light) 60%);
   background-size: 100%;
@@ -73,11 +71,9 @@ body {
   bottom: 500px;
   left: 0;
   height: 500px;
-  /* background-image: linear-gradient(#d8d8d8, #f2f2f2); */
   background-image: linear-gradient(var(--dark), var(--light));
   transform-origin: 50% 0;
   transform: rotateX(-70deg);
-  /*box-shadow: inset 0 0 0 5px purple;*/
 }
 
 /*this contains a radial-gradient, which fakes the watch's dropshadow*/
@@ -86,13 +82,11 @@ body {
   left: 95%;
   height: 20%;
   width: 180%;
-  /*max-width: $mx-width;*/
-  /* background-image:radial-gradient(#cccccc, rgba(204, 204, 204, 0) 60%); */
-  background-image:radial-gradient(#2c2416, rgba(44, 36, 22, 0) 60%);
+  /* background-image:radial-gradient(#2c2416, rgba(44, 36, 22, 0) 60%); */
+  background-image:radial-gradient(#231b0d, rgba(35, 27, 13, 0) 60%);
   background-size: 50% 80%;
   background-repeat: no-repeat;
   transform: translateX(-50%);
-  /*box-shadow: inset 0 0 0 5px purple;*/
 }
 
 .fa-cog, .fa-sign-out-alt {
@@ -145,12 +139,12 @@ body {
 }
 
 .bg-input, .bg-input:focus {
-  color: #40331c;
+  color: var(--light);
   background-color: #c8ad7f;
   border-color: rgba(0, 0, 0, .5);
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.5);
 }
 
 .bg-input::placeholder {
-  color: #40331c;
+  color: var(--light);
 }
