--- a/index.css
+++ b/index.css
@@ -79,9 +79,12 @@ body {
 /*this contains a radial-gradient, which fakes the watch's dropshadow*/
 .coverflow-item-shadow::after {
   bottom: 0;
-  left: 95%;
+  left: 125%;
   height: 20%;
-  width: 180%;
+  width: 300%;
+  -webkit-transition-duration: .5s;
+	   -moz-transition-duration: .5s;
+	        transition-duration: .5s;
   /* background-image:radial-gradient(#2c2416, rgba(44, 36, 22, 0) 60%); */
   background-image:radial-gradient(#231b0d, rgba(35, 27, 13, 0) 60%);
   background-size: 50% 80%;
